Fixed URI/URL construction problems